# ROMA_TensortRT

./: README.md  README_zh.md  readme.md
pytorch/: dino.py  extra.py  matcher_roma.py  onnxsimple.py  readme.txt  roma.py  testonnx.py
tensorrt/: readme.txt  testtrt.py
tensorrt/roma_cpp/: CMakeLists.txt
tensorrt/roma_cpp/src/: RomaMatcher.h
tensorrt/src/: RomaMatcher.cpp  main.cpp
